src/objects/Benefiting_Business_Group__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>(Project_ID__r.Total_Project_Validation_Amount__c * Distribution__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Benefitting_Business_Grp_Functional_Grp__c</fullName>
        <label>Benefitting Business Grp/Functional Grp</label>
        <picklist>
            <picklistValues>
                <fullName>Applications &amp; Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Financial Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief innovation and Operating office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Strategy &amp; Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP/Optical Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal &amp; Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing &amp; Corporate Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Benefitting_Business_Line__c</fullName>
        <label>Benefitting Business Line</label>
        <picklist>
            <controllingField>Benefitting_Business_Unit__c</controllingField>
            <picklistValues>
                <fullName>Multiple BLs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3G Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5520/29 Core PDL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5520/29 PlugIn PDL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>557x Emerging Portfolio Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5G E2E Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5G Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5G Market Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A&amp;A, CO, M&amp;A, Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A&amp;A Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A&amp;A FPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A&amp;A Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A&amp;A Solutions &amp; Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A&amp;A Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AA/ION/FN Customer Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AA Sales Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AA Strategy, Sales Analytics, Operations and IncubationSales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accenture Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accenture Vendor Management, 3rd Level Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Engineering &amp; Consultancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced MN Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced MN Solutions (AMNS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced MN Solutions Commercial Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced MN Solutions Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Mobile Networks Solutions Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Tendering, Product Support and Presales processes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Tendering &amp; Product Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative Investments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Benefitting_Business_Unit__c</fullName>
        <label>Benefitting Business Unit</label>
        <picklist>
            <controllingField>Benefitting_Business_Grp_Functional_Grp__c</controllingField>
            <picklistValues>
                <fullName>Multiple BUs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A&amp;A Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A&amp;A Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A&amp;A Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A&amp;AStrategy, Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC RBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC Regional Business Center (RBC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ &amp; India RBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applications &amp; Analytics Marketing and Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHR A&amp;A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHR CIOO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHR CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHR FN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHR Global Functions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHR ION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHR MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand and Strategy Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BroadBandAccess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Intelligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Center of Expertise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China Regional Business Center (RBC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIOO Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIOO Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CloudBand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMO Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO Integration and Chief of Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications &amp; Collaboration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Distribution__c</fullName>
        <label>% Distribution</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Financial_Planned_Amount__c</fullName>
        <formula>IF(ISBLANK(Project_ID__r.Total_Planned_Financial_Benefits_k__c),0,Project_ID__r.Total_Planned_Financial_Benefits_k__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Planned Amount</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financial_Validation_Amount__c</fullName>
        <label>Financial Validation Amount</label>
        <precision>16</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finanical_Amount__c</fullName>
        <formula>if(Financial_Validation_Amount__c!=0,(Financial_Validation_Amount__c/Project_ID__r.TotalCOPQ__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finanical Amount %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Operational_Amount__c</fullName>
        <formula>if(Operational_Validation_Amount__c!=0,(Operational_Validation_Amount__c/Project_ID__r.TotalKPI__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operational Amount %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Operational_Planned_Amount__c</fullName>
        <formula>IF(ISBLANK(Project_ID__r.Total_Planned_Operational_Benefits_k__c),0,Project_ID__r.Total_Planned_Operational_Benefits_k__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operational Planned Amount</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operational_Validation_Amount__c</fullName>
        <label>Operational Validation Amount</label>
        <precision>16</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_BG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project BG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <label>Project</label>
        <referenceTo>QIPP_Project__c</referenceTo>
        <relationshipLabel>Benefiting Business Groups</relationshipLabel>
        <relationshipName>Benefiting_Business_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <formula>Project_ID__r.Project_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Amount__c</fullName>
        <formula>if(Projected_Validation_Amount__c !=0,(Projected_Validation_Amount__c /Project_ID__r.Total_Validation_Amount_Projected_k__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Amount %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Projected_Planned_Amount__c</fullName>
        <formula>IF(ISBLANK(Project_ID__r.Total_Planned_Projected_Benefits_k__c),0,Project_ID__r.Total_Planned_Projected_Benefits_k__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Planned Amount</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Validation_Amount__c</fullName>
        <label>Projected Validation Amount</label>
        <precision>16</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Realized_Amount__c</fullName>
        <formula>if(Realized_Validation_Amount__c!=0,(Realized_Validation_Amount__c/Project_ID__r.Total_Validation_Amount_Realized_k__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Realized Amount %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Realized_Planned_Amount__c</fullName>
        <formula>IF(ISBLANK(Project_ID__r.Total_Planned_Realized_Benefits_k__c),0,Project_ID__r.Total_Planned_Realized_Benefits_k__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Realized Planned Amount</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Realized_Validation_Amount__c</fullName>
        <label>Realized Validation Amount</label>
        <precision>16</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Validation_Amount__c</fullName>
        <formula>IF(ISBLANK(Operational_Validation_Amount__c),0,Operational_Validation_Amount__c)+IF(ISBLANK(Financial_Validation_Amount__c),0,Financial_Validation_Amount__c)+IF(ISBLANK(Projected_Validation_Amount__c  ),0,Projected_Validation_Amount__c  )+IF(ISBLANK(Realized_Validation_Amount__c),0,Realized_Validation_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Validation Amount</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Validation_Amount_percent__c</fullName>
        <formula>if(Total_Validation_Amount__c=0,0,Total_Validation_Amount__c /Project_ID__r.Total_Project_Validation_Amount__c)</formula>
        <label>Total Validation Amount( %)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Operational_Validation_Amount__c  +  Financial_Validation_Amount__c  +  Projected_Validation_Amount__c  +  Realized_Validation_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Benefiting Business Group</label>
    <nameField>
        <label>Benefiting Business Groups Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Benefiting Business Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>